<resources>
    <string name="app_name">PA Cost Productie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="un_canat_geam_rotobasculant">Un Canat Geam Rotobasculant</string>
    <string name="doua_canate_fix">Doua Canate Fix</string>
    <string name="doua_canate_fix_plus_inversor">Doua Canate Fix Plus Inversor</string>
    <string name="doua_canate_fix_plus_rotobasculant">Doua Canate Fix Plus Rotobasculant</string>
    <string name="doua_canate_rotativ_inversor">Doua Canate Rotativ Inversor</string>
    <string name="doua_canate_rotobasculant_plus_rotativ_inversor">Doua Canate Rotobasculant Plus Rotativ Inversor</string>
    <string name="trei_canate_fix">Trei Canate Fix</string>
    <string name="trei_canate_fix_plus_rotobasculant">Trei Canate Fix Plus Rotobasculant</string>
</resources>