<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_uncanatrotobasculant"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/un_canat_geam_rotobasculant"
            />
        <item
            android:id="@+id/nav_douacanatefix"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/doua_canate_fix"
            />
        <item
            android:id="@+id/nav_douacanatefixplusrotobasculant"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/doua_canate_fix_plus_rotobasculant"
            />

        <item
            android:id="@+id/nav_douacanaterotativinversor"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/doua_canate_rotativ_inversor"
            />

        <item
            android:id="@+id/nav_douacanaterotobasculantplusrotativinversor"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/doua_canate_rotobasculant_plus_rotativ_inversor"
            />

        <item
            android:id="@+id/nav_treicanatefix"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/trei_canate_fix"
            />

        <item
            android:id="@+id/nav_treicanatefixplusrotobasculant"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/trei_canate_fix_plus_rotobasculant"
            />
    </group>
</menu>