<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pacostproductie.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pacostproductie.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pacostproductie.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_uncanatrotobasculant"
        android:name="com.example.pacostproductie.ui.uncanatrotobasculant.UnCanatRotobasculantFragment"
        android:label="@string/un_canat_geam_rotobasculant"
        tools:layout="@layout/fragment_un_canat_rotobasculant"
        />
    <fragment
        android:id="@+id/nav_douacanatefix"
        android:name="com.example.pacostproductie.ui.douacanatefix.DouaCanateFixFragment"
        android:label="@string/doua_canate_fix"
        tools:layout="@layout/fragment_doua_canate_fix" />

    <fragment
        android:id="@+id/nav_douacanatefixplusrotobasculant"
        android:name="com.example.pacostproductie.ui.douacanatefixplusrotobasculant.DouaCanateFixPlusRotobasculantFragment"
        android:label="@string/doua_canate_fix_plus_rotobasculant"
        tools:layout="@layout/fragment_doua_canate_fix_plus_rotobasculant" />

    <fragment
        android:id="@+id/nav_douacanaterotativinversor"
        android:name="com.example.pacostproductie.ui.douacanaterotativinversor.DouaCanateRotativInversorFragment"
        android:label="@string/doua_canate_rotativ_inversor"
        tools:layout="@layout/fragment_doua_canate_rotativ_inversor" />

    <fragment
        android:id="@+id/nav_douacanaterotobasculantplusrotativinversor"
        android:name="com.example.pacostproductie.ui.douacanaterotobasculantplusrotativinversor.DouaCanateRotobasculantPlusRotativInversorFragment"
        android:label="@string/doua_canate_rotobasculant_plus_rotativ_inversor"
        tools:layout="@layout/fragment_doua_canate_rotobasculant_plus_rotativ_inversor" />

    <fragment
        android:id="@+id/nav_treicanatefix"
        android:name="com.example.pacostproductie.ui.treicanatefix.TreiCanateFixFragment"
        android:label="@string/trei_canate_fix"
        tools:layout="@layout/fragment_trei_canate_fix" />

    <fragment
        android:id="@+id/nav_treicanatefixplusrotobasculant"
        android:name="com.example.pacostproductie.ui.treicanatefixplusrotobasculant.TreiCanateFixPlusRotobasculantFragment"
        android:label="@string/trei_canate_fix"
        tools:layout="@layout/fragment_trei_canate_fix_plus_rotobasculant" />
</navigation>